--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
             placeholder="Find your book..."
           />
           <div class="btn-search">
-            <img src="/assets/img/search.svg" alt="Search" />
+            <img src="./assets/img/search.svg" alt="Search" />
           </div>
         </div>
 
